# Cretan-Old

./: .gitignore  .gitmodules  CMakeDefs.txt  CMakeLists.txt  Makefile  Pipfile  README.md  ServiceAccountKey.py-Format.md
Cretan/: CretanServer.py  DownstreamMessaging.py  NetworkUtils.py  SendMessage.py
LizardServer/: DownstreamMessaging.py  LizardServer.py  SendMessage.py
app/: build.gradle  google-services.json
app/src/androidTest/java/com/edtwardy/cretan/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/edtwardy/lizard/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/edtwardy/cretan/: CretanNotificationService.java  MainActivity.java
app/src/main/java/com/edtwardy/lizard/: LizardNotificationService.java  MainActivity.java
app/src/main/res/drawable/: ic_notifications_black_24dp.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: navigation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/edtwardy/cretan/: CretanNotificationServiceTest.java  ExampleUnitTest.java
app/src/test/java/com/edtwardy/lizard/: ExampleUnitTest.java  LizardNotificationServiceTest.java
gradle/wrapper/: gradle-wrapper.properties
include/Interfaces/: iServer.h
include/Networking/: TCPServer.h
include/namespaces/: Interfaces.h  Networking.h
source/: main.cpp
